Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6.21, 11.4, 11.8, 12.3, 10.11.13
-
clang-20.1 ASAN+UBSAN
-
Not for Release Notes
Description
|
10.6 |
CURRENT_TEST: roles.acl_load_mutex-5170
|
2025-03-21 4:36:11 0 [Note] /build/sql/mariadbd (initiated by: root[root] @ localhost []): Normal shutdown
|
2025-03-21 4:36:11 0 [Note] /build/sql/mariadbd: Shutdown complete
|
|
|
=================================================================
|
==897120==ERROR: LeakSanitizer: detected memory leaks
|
|
|
Direct leak of 232 byte(s) in 1 object(s) allocated from:
|
#0 0x56186746e15d in operator new(unsigned long) (/build/sql/mariadbd+0x1bfc15d) (BuildId: e4cbe1e90dcf9ad5532606f102cf779243ea4f37)
|
#1 0x7b653f3ed038 (<unknown module>)
|
#2 0x7b653f28ea73 (<unknown module>)
|
#3 0x7b653efc9718 (<unknown module>)
|
#4 0x7b653e89a0d6 (<unknown module>)
|
#5 0x7f654beb59cd (/lib64/ld-linux-x86-64.so.2+0x49cd) (BuildId: f4bc47db467906580a47640e01e6d901e2642a7b)
|
|
|
SUMMARY: AddressSanitizer: 232 byte(s) leaked in 1 allocation(s).
|
250321 4:36:11 [ERROR] /build/sql/mariadbd got signal 6 ;
|
Sorry, we probably made a mistake, and this is a bug.
|
Attachments
Issue Links
- is part of
-
MDEV-36647 No red leaves in the forest
-
- Open
-
- relates to
-
MDEV-35772 LSAN: LeakSanitizer: detected memory leaks in operator new
-
- Closed
-
-
MDEV-38979 TLS exit destructor called into dlclose(d) plugin - was: rocksdb.check_ignore_unknown_options - SEGV on shutdown
-
- Open
-
-
MDEV-39827 Memleak on shutdown in roles.acl_load_mutex-5170
-
- Open
-