MDEV-36345: Fix memleak in plugin_add() on hash insert failure

In plugin_add(), init_alloc_root() was called unconditionally after
plugin_insert_or_reuse(), even when my_hash_insert() failed and the
plugin state was set to PLUGIN_IS_FREED.

This caused a memory leak because the newly initialized mem_root was
never freed — plugin_del() only frees mem_root for plugins that go
through the normal deletion path, not ones immediately marked as
PLUGIN_IS_FREED due to hash insertion failure.

Fix: Guard init_alloc_root() with else so it is only called when
my_hash_insert() succeeds.

Reviewed-by: